show.edit.update.destroyアクションを実装

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -7,27 +7,36 @@
   </tr>
   <tr>
     <th>開始日</th>
-    <td><%= @task.start_day %></td>
+    <td><%= @task.start_day.strftime("%Y年%m月%d日")  %></td>
   </tr>
   <tr>
     <th>投稿日時</th>
-    <td><%= @task.updated_at.to_s(:datetime_jp) %></td>
+    <td><%= @task.end_day.strftime("%Y年%m月%d日") %></td>
   </tr>
   <tr>
     <th>終日</th>
-    <td><%= @task.all_day %></td>
-  </tr>
+    <td>
+      <% if @task.all_day == true %>
+        ◯
+      <% else %>
+      <% end %>
+    </td>
 
   <tr>
     <th>スケジュールメモ</th>
     <td><%= @task.memo %></td>
   </tr>
 
-
 </table>
 
 <div>
   <ul>
     <li><%= link_to "スケジュール一覧に戻る", :tasks %></li>
+    <li><%= link_to "スケジュールを編集する",[:edit,@task] %></li>
+    <li><%= link_to "スケジュールを削除" ,@task,method: :delete,data:{confirm:"本当に削除しますか?"} %></li>
   </ul>
 </div>
+
+<footer>
+  <h1>現在の日時 : <%= @date %></h1>
+</footer>
