--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,24 +1,19 @@
-<h3>スケジュール新規登録</h3>
+<h3>スケジュール編集</h3>
 
 <% if flash[:failure] %>
   <p class="alert alert__failure"><%= flash[:failure] %></p>
 <% end %>
-
-<%= render "shared/error", obj: @task %>
-
+<%= render"shared/error",obj: @task %>
 <%= form_with model: @task do |f| %>
   <table>
     <tr>
       <th><%= f.label :title, "タイトル" %></th>
       <td><%= f.text_field :title %></td>
     </tr>
-
     <tr>
       <th><%= f.label :start_day, "開始日" %></th>
-      <td><%= f.text_field :start_day, :class => 'datepicker' %></td>
+      <td><%= f.text_field :start_day %></td>
     </tr>
-
-
     <tr>
       <th><%= f.label :end_day, "終了日" %></th>
       <td><%= f.text_field :end_day %></td>
@@ -26,8 +21,7 @@
 
     <tr>
       <th><%= f.label :all_day, "終日" %></th>
-      <
-      <td><%= f.check_box :all_day %>
+      <td><%= f.check_box :all_day, {}, true, false %>
         <p>終日の場合はチェックを入れます</p>
       </td>
     </tr>
@@ -37,14 +31,12 @@
       <td><%= f.text_area :memo %></td>
     </tr>
   </table>
-
   <div>
     <ul>
-      <li><%= f.submit "スケジュール新規登録する" %></li>
-      <li><%= link_to "ユーザー情報一覧に戻る", :tasks %></li>
+      <li><%= f.submit "スケジュールの編集を完了する" %></li>
+      <li><%= link_to "スケジュール一覧に戻る", :tasks %></li>
     </ul>
   </div>
-
 <% end %>
 
 <footer>
