--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -12,11 +12,11 @@
     </tr>
     <tr>
       <th><%= f.label :start_day, "開始日" %></th>
-      <td><%= f.text_field :start_day %></td>
+      <td><%= f.date_field :start_day %></td>
     </tr>
     <tr>
       <th><%= f.label :end_day, "終了日" %></th>
-      <td><%= f.text_field :end_day %></td>
+      <td><%= f.date_field :end_day %></td>
     </tr>
 
     <tr>
