--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -15,13 +15,13 @@
 
     <tr>
       <th><%= f.label :start_day, "開始日" %></th>
-      <td><%= f.text_field :start_day, :class => 'datepicker' %></td>
+      <td><%= f.date_field :start_day, :class => 'datepicker' %></td>
     </tr>
 
 
     <tr>
       <th><%= f.label :end_day, "終了日" %></th>
-      <td><%= f.text_field :end_day %></td>
+      <td><%= f.date_field :end_day %></td>
     </tr>
 
     <tr>
