終日部分が更新されないエラーの修正

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -21,7 +21,7 @@
 
     <tr>
       <th><%= f.label :all_day, "終日" %></th>
-      <td><%= f.check_box :all_day, {}, true, false %>
+      <td><%= f.check_box :all_day %>
         <p>終日の場合はチェックを入れます</p>
       </td>
     </tr>
